# veneto_realtime

./: README.md  filtraggio_ingestion_smet.py  fix_header.py  fix_ingestion_smet.py  fix_ingestion_smet_2.py  psum_multiplicator.py  pyproject.toml  rename_smet.py
INGESTION/arpav_2025-12-15_2025-12-19/: 008db245-cf36-4d40-8a20-c0072f0326f3.smet  0145cee0-367d-4e0c-a6d7-348999dcd461.smet  038b8a0e-cc06-40e7-babf-f209cc9d4aa4.smet  03f0e823-a32d-45fc-89bf-410d107c2332.smet  04bf8dd7-19ef-41e5-977e-a391ba858d6a.smet  05f8b032-5246-44df-adfb-d1639b511493.smet  0b091dc1-3783-463f-8797-2084066eef94.smet  0b35fc12-dfd6-4e97-a73f-1ddf4576f52b.smet  0c83245e-dacc-4f24-ae35-d109a9964563.smet  0c99b81a-a6a9-45a5-88c2-d533b92b0dfc.smet  0ccfc750-99e8-4bd8-bd0a-5daada973611.smet  0ced1626-8564-44f4-b8a6-9902c4c21f20.smet  0d8c98cb-e567-4104-9b58-890e786649b4.smet  0f59d2ed-b15e-42f6-b799-2e3b0cd4115e.smet  12345d12-0544-4511-afeb-dfb2ce399f9a.smet  12dcb86f-2e8d-48f9-9af1-7b1016bc1d54.smet  19761234-3f66-4133-86bb-6883063b28be.smet  1bd429a9-e58a-4dde-84f1-4c3ca7dda07b.smet  206dc10e-db9b-43c6-a1d9-4c8ee67e8bd3.smet  21eb2163-a3e1-45ce-bafb-9012c8760ea3.smet  22d3789d-be58-48d8-bf1a-cfbb26e9898e.smet  23b08527-44e7-4f8d-a0c4-d38022e2c8ce.smet  2b2b5086-dbba-490c-9e1d-e66bc6cc20df.smet  2d9b521a-77ec-4493-9df3-fd5641841437.smet  (+142 more)
config/: anagrafica_stazioni.jsonl  rename_id.xlsx
docs/: workflow_veneto_realtime_dec2025.docx
meteo/: PM0_Local.yml  PM1_integr.yml  PM2_snow.yml  PM3_interp2grid.yml  PM3_interp2grid_MASS.yml
scripts/: fix_ingestion_smet.py  psum_multiplicator.py
(+167 files in other folders)
