[project]
name = "veneto-realtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "dask>=2025.11.0",
    "geopandas>=1.1.1",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.7",
    "netcdf4>=1.7.3",
    "numba>=0.62.1",
    "openpyxl>=3.1.5",
    "pyproj>=3.7.2",
    "requests>=2.32.5",
    "shapely>=2.1.2",
    "xarray>=2025.11.0",
]
